# Avido

./: .dockerignore  .env  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg  structure.txt  user.txt
alembic/: env.py
alembic/versions/: 2ee861c52c44_initial_tables.py  68bb12c99f7a_initial_tables.py
application/: __init__.py  config.py  constants.py  context.py  logging_config.py
application/commands/: ad.py  user.py
application/domain/ad/: ad.py  ad_repository.py
application/domain/category_ad/: category_ad.py  category_ad_repository.py
application/domain/entities/: ad.py  base.py  category_ad.py  moderation.py  user.py
application/domain/exceptions/: ad.py  category.py  user.py
application/domain/moderation/: moderation.py  moderation_repository.py
application/domain/repos/: ad.py  category_ad.py  moderation.py  user.py
application/domain/user/: user.py  user_repository.py
application/domain/value_objects/: ad.py  base.py  user.py
application/events/: events.py
application/exceptions/: base.py  broker.py  db.py  domain.py
application/exceptions/domain/: ad.py  category.py  user.py
application/exceptions/repository/: db.py
application/infrastructure/: database.py  message_bus.py  unit_of_work_manager.py
application/infrastructure/bus/: local.py
application/infrastructure/middlewares/: __init__.py  middleware.py
application/repos/: ad.py  category_ad.py  moderation.py  user.py
application/repos/models/: __init__.py  ad.py  category_ad.py  (+2 more)
application/services/: __init__.py  ad.py  category_ad.py  moderation.py  user.py
application/web/: __init__.py  app.py
certs/: jwt-private.pem  jwt-public.pem
src/infrastructure/: config.py
src/repos/: user.py
(+51 files in other folders)
