[tool.poetry]
name = "avido"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
pre-commit = "^3.7.0"
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.21"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
extend-exclude = "alembic/, pg_data/, tests/"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
skip_glob = ["alembic/*", "pg_data/*", "tests/*"]

[tool.mypy]
mypy_path = "./src"
follow_imports = "silent"
ignore_missing_imports = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
pythonpath = "src"
exclude = ["config.py", "tests/"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
